@@ -1,121 +1,75 @@
 plugins {
-    id 'fabric-loom' version '1.15-SNAPSHOT'
-    id 'maven-publish'
+	id 'net.fabricmc.fabric-loom' version "${loom_version}"
+	id 'maven-publish'
 }
 
-version = project.mod_version
+ext.minecraftMajor = project.minecraft_version.tokenize('.').take(2).join('.')
+version = "${project.mod_version}+${project.minecraft_version}"
 group = project.maven_group
 
 base {
-    archivesName = project.archives_base_name
+	archivesName = "WhispersOfEther-fabric-${minecraftMajor}"
 }
 
 loom {
-    splitEnvironmentSourceSets()
-    accessWidenerPath = file("src/main/resources/whispers_of_ether.accesswidener")
+	splitEnvironmentSourceSets()
+	accessWidenerPath = file("src/main/resources/whispers_of_ether.accesswidener")
 
-    mods {
-        "whispers_of_ether" {
-            sourceSet sourceSets.main
-            sourceSet sourceSets.client
-        }
-    }
-    
-    runs {
-        client {
-            vmArg "-XX:+UnlockExperimentalVMOptions"
-            vmArg "-XX:+AllowEnhancedClassRedefinition"
-            vmArg "-XX:+UseG1GC"
-            vmArg "-Xmx4G"
-        }
-    }
-}
+	mods {
+		"whispers_of_ether" {
+			sourceSet sourceSets.main
+			sourceSet sourceSets.client
+		}
+	}
 
-fabricApi {
-    configureDataGeneration {
-        client = true
-    }
-}
-
-repositories {
-    maven {
-        name = 'Ladysnake Mods'
-        url = 'https://maven.ladysnake.org/releases'
-    }
+	runs {
+		configureEach {
+			vmArg "-XX:+UseZGC"
+			vmArg "-Xmx4G"
+		}
+	}
 }
 
 dependencies {
-    // To change the versions see the gradle.properties file
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings loom.officialMojangMappings()
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    
-    // Cardinal Components API
-    modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
-    modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
-    modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-world:${project.cca_version}"
+	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 }
 
 processResources {
-    inputs.property "version", project.version
-    inputs.property "minecraft_version", project.minecraft_version
-    inputs.property "loader_version", project.loader_version
-    filteringCharset "UTF-8"
+	def properties = [
+		version: project.version,
+		minecraft_version: project.minecraft_version,
+		loader_version: project.loader_version
+	]
+	inputs.properties properties
 
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version,
-                "minecraft_version": project.minecraft_version,
-                "loader_version": project.loader_version
-    }
+	filesMatching("fabric.mod.json") {
+		expand properties
+	}
 }
 
-def targetJavaVersion = 21
 tasks.withType(JavaCompile).configureEach {
-    // ensure that the encoding is set to UTF-8, no matter what the system default is
-    // this fixes some edge cases with special characters not displaying correctly
-    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-    // If Javadoc is generated, this must be specified in that task too.
-    it.options.encoding = "UTF-8"
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        it.options.release.set(targetJavaVersion)
-    }
+	it.options.encoding = "UTF-8"
+	it.options.release = 25
+}
+
+tasks.withType(AbstractArchiveTask).configureEach {
+	archiveVersion = project.mod_version
 }
 
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
-    withSourcesJar()
+	withSourcesJar()
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(25)
+	}
 }
 
-jar {
-    from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}" }
-    }
-}
-
-
-// configure the maven publication
 publishing {
-    publications {
-        create("mavenJava", MavenPublication) {
-            artifactId = project.archives_base_name
-            from components.java
-        }
-    }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
-    }
+	publications {
+		create("mavenJava", MavenPublication) {
+			artifactId = "whispers_of_ether-fabric-${minecraftMajor}"
+			from components.java
+		}
+	}
 }
-
